Bug 1571517 - Don't bail out when serializing a range starting at the end of an element. r=mbrodesser

We have a range that starts at the end of a cell, and ends somewhere else.

We were bailing out recursively from the beginning, causing the serialization to
be the empty string rather than the actually selected text.

Differential Revision: https://phabricator.services.mozilla.com/D42495

--HG--
extra : moz-landing-system : lando